--- a/crud.html
+++ b/crud.html
@@ -6,6 +6,13 @@
     <meta http-equiv="X-UA-Compatible" contenido="IE=edge">
     <meta name="viewport" contenido="width=device-width, initial-scale=1.0">
     <title>Noticias</title>
+    <script>
+		function reloadPage() {
+		  location.reload();
+		}
+	
+		setTimeout(reloadPage, 30000); 
+	</script>
     <link rel="icon" type="image/ico" href="../static/img/icono.ico" />
     <link rel="stylesheet" href="../static/css/navbar.css">
     <link rel="stylesheet" href="../static/css/noticias-cards.css">
@@ -30,40 +37,54 @@
         <label for="toggle">Menú</label>
     </div>
 
-    <div class="contuchi">
+    <div id="app" class="contuchi">
+        <!-- <div class="contuchi"> -->
         <button class="botonn">
-            <a href="noticias_nuevo.html">Crear noticia</a>
-          </button>
-        <table class="zigzag">
-            <thead>
-                <tr>
-                    <th class="header">Titular</th>
-                    <th class="header">Autor</th>
-                    <th class="header">Fecha</th>
-                    <th class="header">Acciones</th>
-                    <th class="header">Eliminar</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>{noticia.titular}</td>
-                    <td>{noticia.autor}</td>
-                    <td>{noticia.fecha}</td>
-                    <td>
-                        <button class="botonm">
-                            <p><a href="noticias_editar.html">Modificar</a></p>
-                        </button>
-                    </td>
-                    <td>
-                        <button class="botone">
-                            <p><a href="">Eliminar</a></p>
-                        </button>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
+            <a href="noticia_nuevo.html">Crear noticia</a>
+        </button>
+        <section v-if="error">Lo sentimos se produjo un error</section>
+        <section v-else>
+            <section v-if="cargando">
+                <div class="spinner-border"></div>
+                <p>Cargando .....</p>
 
+            </section>
+            <section v-else>
+                <div class="table-responsive"></div>
+                    <!-- <table class="zigzag"> -->
+                    <table class="table align-middle">    
+                        <thead>
+                            <tr>
+                                <th scope="col">Id</th>    
+                                <th scope="col">Titular</th>
+                                <th scope="col">Autor</th>
+                                <th cscope="col">Fecha</th>
+                                <th cscope="col">Imagen</th>
+                                <th scope="col">Acciones</th>
+                                <!-- <th scope="col">Eliminar</th> -->
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr v-for="noticia in noticias" class="">
+                                <td scope="row">{{noticia.id}}</td>
+                                <td>{{noticia.titular}}</td>
+                                <td>{{noticia.autor}}</td>
+                                <td>{{noticia.fecha}}</td>
+                                <td>
+                                    <img width="60" :src="noticia.imagen" :alt="Imagen">
+                               </td>
+                                <td>
+                                   <a class="btn btn-primary btn-sm" :href="'noticia_editar.html?id='+ noticia.id+'&titular=' +noticia.titular+'&autor=' +noticia.autor+'&fecha=' +noticia.fecha+ '&copete='+noticia.copete+'&cuerpo='+noticia.cuerpo +  '&imagen='+noticia.imagen">Modificar</a>
+                                    <button type="button" class="btn btn-danger btn-sm" v-on:click="eliminar(noticia.id)">Eliminar</button>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </section>
+        </section>
+         
+    </div>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="../static/js/noticiasGetAll.js"></script>
     <script src="../static/js/modal.js"></script>
