--- a/crud.html
+++ b/crud.html
@@ -7,12 +7,12 @@
     <meta name="viewport" contenido="width=device-width, initial-scale=1.0">
     <title>Noticias</title>
     <script>
-		function reloadPage() {
-		  location.reload();
-		}
-	
-		setTimeout(reloadPage, 30000); 
-	</script>
+        function reloadPage() {
+            location.reload();
+        }
+
+        setTimeout(reloadPage, 30000); 
+    </script>
     <link rel="icon" type="image/ico" href="../static/img/icono.ico" />
     <link rel="stylesheet" href="../static/css/navbar.css">
     <link rel="stylesheet" href="../static/css/noticias-cards.css">
@@ -37,57 +37,63 @@
         <label for="toggle">Menú</label>
     </div>
 
-    <div id="app" class="contuchi">
-        <!-- <div class="contuchi"> -->
-        <button class="botonn">
-            <a href="noticia_nuevo.html">Crear noticia</a>
-        </button>
-        <section v-if="error">Lo sentimos se produjo un error</section>
-        <section v-else>
-            <section v-if="cargando">
-                <div class="spinner-border"></div>
-                <p>Cargando .....</p>
-
-            </section>
+    <div id="app">
+        <div class="contuchi">
+            <button class="botonn">
+                <a href="noticia_nuevo.html">Crear noticia</a>
+            </button>
+            <section v-if="error">Lo sentimos se produjo un error</section>
             <section v-else>
-                <div class="table-responsive"></div>
-                    <!-- <table class="zigzag"> -->
-                    <table class="table align-middle">    
-                        <thead>
-                            <tr>
-                                <th scope="col">Id</th>    
-                                <th scope="col">Titular</th>
-                                <th scope="col">Autor</th>
-                                <th cscope="col">Fecha</th>
-                                <th cscope="col">Imagen</th>
-                                <th scope="col">Acciones</th>
-                                <!-- <th scope="col">Eliminar</th> -->
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr v-for="noticia in noticias" class="">
-                                <td scope="row">{{noticia.id}}</td>
-                                <td>{{noticia.titular}}</td>
-                                <td>{{noticia.autor}}</td>
-                                <td>{{noticia.fecha}}</td>
-                                <td>
-                                    <img width="60" :src="noticia.imagen" :alt="Imagen">
-                               </td>
-                                <td>
-                                   <a class="btn btn-primary btn-sm" :href="'noticia_editar.html?id='+ noticia.id+'&titular=' +noticia.titular+'&autor=' +noticia.autor+'&fecha=' +noticia.fecha+ '&copete='+noticia.copete+'&cuerpo='+noticia.cuerpo +  '&imagen='+noticia.imagen">Modificar</a>
-                                    <button type="button" class="btn btn-danger btn-sm" v-on:click="eliminar(noticia.id)">Eliminar</button>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
+                <section v-if="cargando">
+                    <div class="spinner-border"></div>
+                    <p>Buscando noticias...</p>
+                </section>
+                <section v-else>
+
+                    <div class="tabla-container">
+                        <table class="zigzag">
+                            <thead>
+                                <tr>
+                                    <th scope="col">Id</th>
+                                    <th scope="col" style="width: 400px;">Titular</th>
+                                    <th scope="col">Autor</th>
+                                    <th scope="col" style="width: 100px;">Fecha</th>
+                                    <th scope="col">Imagen</th>
+                                    <th scope="col">Modificar</th>
+                                    <th scope="col">Eliminar</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr v-for="noticia in noticias" class="">
+                                    <td scope="row">{{noticia.id}}</td>
+                                    <td style="min-width: 400px;">{{noticia.titular}}</td>
+                                    <td>{{noticia.autor}}</td>
+                                    <td style="min-width: 100px;">{{noticia.fecha}}</td>
+                                    <td>
+                                        <img width="60" :src="noticia.imagen" :alt="Imagen">
+                                    </td>
+                                    <td>
+                                        <button class="botonm">
+                                            <a class="botonm"
+                                                :href="'noticia_editar.html?id='+ noticia.id+'&titular=' +noticia.titular+'&autor=' +noticia.autor+'&fecha=' +noticia.fecha+ '&copete='+noticia.copete+'&cuerpo='+noticia.cuerpo +'&imagen='+noticia.imagen">Modificar</a>
+                                        </button>
+                                    </td>
+                                    <td>
+                                        <button class="botone" v-on:click="eliminar(noticia.id)">Eliminar</button>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </section>
             </section>
-        </section>
-         
+        </div>
+    </div>
+
     </div>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="../static/js/noticiasGetAll.js"></script>
-    <script src="../static/js/modal.js"></script>
+    <script src="../static/JS/modal.js"></script>
 </body>
 
 </html>
